Fix extraneous overflow-y scroll in storybook

--- a/packages/compass-aggregations/.storybook/decorators/component-preview.less
+++ b/packages/compass-aggregations/.storybook/decorators/component-preview.less
@@ -1,16 +1,16 @@
 .root {
-  @gutter: 1rem;
+  // @gutter: 1rem;
 
-  margin-top: @gutter / 2;
-  border: 1px solid transparent;
-  position: absolute;
+  // margin-top: @gutter / 2;
+  // border: 1px solid transparent;
+  // position: absolute;
 
-  top: @gutter;
-  left: @gutter;
-  right: @gutter;
-  bottom: @gutter;
+  // top: @gutter;
+  // left: @gutter;
+  // right: @gutter;
+  // bottom: @gutter;
 
-  overflow: scroll;
+  // overflow: scroll;
 
   // &::before {
   //   content: 'Live Preview';
